// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented 1`] = `
Array [
  <div
    class="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    style="width:100%;opacity:0"
  >
    <div
      class="sc-bcXGCL ghEBPM"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan2-llVMxp jJypkj"
        role="img"
      >
        🎉
      </span>
      <span>
        thanks-for-debate-richer
      </span>
      <button
        class="sc-bcXGCL sc-laZSpB jhruA-D bGltjj cap-button"
        type="button"
      >
        delete.vote.against
      </button>
    </div>
    <div
      class="sc-bcXGCL kVWsnw"
    >
      <a
        class="twitter-share-button"
        data-show-count="false"
        href="https://twitter.com/share?ref_src=twsrc%5Etfw"
        style="margin-left:0;margin-top:0"
      >
        Tweet
      </a>
      <div
        data-testid="Tooltip"
        label="copied-link"
      >
        <button
          class="sc-bcXGCL sc-laZSpB hwdiSU jFPqgL cap-button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="sc-bcXGCL sc-eJDTud fpzUrh knzWyK cap-icon"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m13.944 24.499-3.65 3.648a3.804 3.804 0 0 1-5.255 0l-1.19-1.188a3.716 3.716 0 0 1 0-5.255l7.734-7.733a3.72 3.72 0 0 1 5.256 0l1.19 1.189a1.337 1.337 0 0 0 1.891-1.89l-1.19-1.19a6.39 6.39 0 0 0-9.029 0l-7.733 7.733a6.383 6.383 0 0 0 0 9.027l1.19 1.188a6.38 6.38 0 0 0 9.027 0l3.648-3.647a1.335 1.335 0 0 0-1.885-1.886z"
              fill="currentColor"
            />
            <path
              d="m30.035 3.15-1.19-1.189a6.4 6.4 0 0 0-9.026 0l-3.874 3.867a1.333 1.333 0 0 0 1.886 1.885l3.866-3.866a3.72 3.72 0 0 1 5.255 0l1.19 1.19a3.715 3.715 0 0 1 0 5.256l-7.733 7.734a3.7 3.7 0 0 1-2.628 1.089 3.69 3.69 0 0 1-2.625-1.088 1.334 1.334 0 1 0-1.887 1.883 6.34 6.34 0 0 0 4.512 1.866 6.34 6.34 0 0 0 4.514-1.866l7.733-7.734a6.38 6.38 0 0 0 0-9.028z"
              fill="currentColor"
            />
          </svg>
          global.link
        </button>
      </div>
    </div>
    <div
      class="sc-bcXGCL cunoZs cap-card DebateStepPageVoteForm___StyledCard-fhHJyb kRMgRs"
    >
      <form
        class="DebateStepPageVoteForm__Form-kprBSF GzXgt"
        id="debate-argument-form"
      >
        <div
          class="form-group"
        >
          <textarea
            aria-describedby="label-body "
            aria-invalid="false"
            autocomplete="off"
            class="form-control"
            id="body"
            minlength="1"
            name="body"
            placeholder="why-are-you-against"
            type="textarea"
          />
          <div
            class="Notepad__Container-imViwV dJKVKi visible-print-block"
          >
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
          </div>
        </div>
        <div
          class="sc-bcXGCL bghzXx"
        >
          <button
            class="sc-bcXGCL sc-laZSpB fhIZOJ gDuqin cap-button"
            type="button"
          >
            global.cancel
          </button>
          <button
            class="sc-bcXGCL sc-laZSpB dNMLhR ietVcX cap-button"
            type="submit"
          >
            argument.publish.mine
          </button>
        </div>
      </form>
    </div>
  </div>,
]
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented not confirmed 1`] = `
Array [
  <div
    class="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    style="width:100%;opacity:0"
  >
    <div
      class="sc-bcXGCL ghEBPM"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan2-llVMxp jJypkj"
        role="img"
      >
        🎉
      </span>
      <span>
        publish.argument.validate.account
      </span>
      <button
        class="sc-bcXGCL sc-laZSpB jhruA-D bGltjj cap-button"
        type="button"
      >
        delete.vote.against
      </button>
    </div>
    <div
      class="sc-bcXGCL cunoZs cap-card DebateStepPageVoteForm___StyledCard-fhHJyb kRMgRs"
    >
      <form
        class="DebateStepPageVoteForm__Form-kprBSF GzXgt"
        id="debate-argument-form"
      >
        <div
          class="form-group"
        >
          <textarea
            aria-describedby="label-body "
            aria-invalid="false"
            autocomplete="off"
            class="form-control"
            id="body"
            minlength="1"
            name="body"
            placeholder="why-are-you-against"
            type="textarea"
          />
          <div
            class="Notepad__Container-imViwV dJKVKi visible-print-block"
          >
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
          </div>
        </div>
        <div
          class="sc-bcXGCL bghzXx"
        >
          <button
            class="sc-bcXGCL sc-laZSpB fhIZOJ gDuqin cap-button"
            type="button"
          >
            global.cancel
          </button>
          <button
            class="sc-bcXGCL sc-laZSpB dNMLhR ietVcX cap-button"
            type="submit"
          >
            argument.publish.mine
          </button>
        </div>
      </form>
    </div>
  </div>,
]
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented not confirmed on mobile 1`] = `
Array [
  <div
    class="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    style="width:100%;opacity:1"
  >
    <div
      class="sc-bcXGCL ghEBPM"
    >
      <button
        class="sc-bcXGCL sc-laZSpB jhruA-D bGltjj cap-button"
        type="button"
      >
        delete.vote.against
      </button>
      <p
        class="sc-bcXGCL eDWurL cap-text"
      >
        <span
          aria-label="vote"
          class="DebateStepPageVoteForm___StyledSpan-bFgDPf jqyYXc"
          role="img"
        >
          🎉
        </span>
        <span>
          publish.argument.validate.account
        </span>
      </p>
    </div>
    <button
      class="sc-bcXGCL sc-laZSpB jEWjgc ietVcX cap-button"
      type="button"
    >
      publish-argument
    </button>
  </div>,
]
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when argumented on mobile 1`] = `
Array [
  <div
    class="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    style="width:100%;opacity:1"
  >
    <div
      class="sc-bcXGCL ghEBPM"
    >
      <button
        class="sc-bcXGCL sc-laZSpB jhruA-D bGltjj cap-button"
        type="button"
      >
        delete.vote.against
      </button>
      <p
        class="sc-bcXGCL eDWurL cap-text"
      >
        <span
          aria-label="vote"
          class="DebateStepPageVoteForm___StyledSpan-bFgDPf jqyYXc"
          role="img"
        >
          🎉
        </span>
        <span>
          thanks-for-debate-richer
        </span>
      </p>
    </div>
    <div
      class="sc-bcXGCL kVWsnw"
    >
      <a
        class="twitter-share-button"
        data-show-count="false"
        href="https://twitter.com/share?ref_src=twsrc%5Etfw"
        style="margin-left:0;margin-top:0"
      >
        Tweet
      </a>
      <div
        data-testid="Tooltip"
        label="copied-link"
      >
        <button
          class="sc-bcXGCL sc-laZSpB hwdiSU jFPqgL cap-button"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="sc-bcXGCL sc-eJDTud fpzUrh knzWyK cap-icon"
            fill="none"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m13.944 24.499-3.65 3.648a3.804 3.804 0 0 1-5.255 0l-1.19-1.188a3.716 3.716 0 0 1 0-5.255l7.734-7.733a3.72 3.72 0 0 1 5.256 0l1.19 1.189a1.337 1.337 0 0 0 1.891-1.89l-1.19-1.19a6.39 6.39 0 0 0-9.029 0l-7.733 7.733a6.383 6.383 0 0 0 0 9.027l1.19 1.188a6.38 6.38 0 0 0 9.027 0l3.648-3.647a1.335 1.335 0 0 0-1.885-1.886z"
              fill="currentColor"
            />
            <path
              d="m30.035 3.15-1.19-1.189a6.4 6.4 0 0 0-9.026 0l-3.874 3.867a1.333 1.333 0 0 0 1.886 1.885l3.866-3.866a3.72 3.72 0 0 1 5.255 0l1.19 1.19a3.715 3.715 0 0 1 0 5.256l-7.733 7.734a3.7 3.7 0 0 1-2.628 1.089 3.69 3.69 0 0 1-2.625-1.088 1.334 1.334 0 1 0-1.887 1.883 6.34 6.34 0 0 0 4.512 1.866 6.34 6.34 0 0 0 4.514-1.866l7.733-7.734a6.38 6.38 0 0 0 0-9.028z"
              fill="currentColor"
            />
          </svg>
          global.link
        </button>
      </div>
    </div>
    <button
      class="sc-bcXGCL sc-laZSpB jEWjgc ietVcX cap-button"
      type="button"
    >
      publish-argument
    </button>
  </div>,
]
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted 1`] = `
Array [
  <div
    class="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    style="width:100%;opacity:0"
  >
    <div
      class="sc-bcXGCL ghEBPM"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan2-llVMxp jJypkj"
        role="img"
      >
        🗳️
      </span>
      <span>
        thanks-for-your-vote
      </span>
      <button
        class="sc-bcXGCL sc-laZSpB jhruA-D bGltjj cap-button"
        type="button"
      >
        delete.vote.against
      </button>
    </div>
    <div
      class="sc-bcXGCL cunoZs cap-card DebateStepPageVoteForm___StyledCard-fhHJyb kRMgRs"
    >
      <form
        class="DebateStepPageVoteForm__Form-kprBSF GzXgt"
        id="debate-argument-form"
      >
        <div
          class="form-group"
        >
          <textarea
            aria-describedby="label-body "
            aria-invalid="false"
            autocomplete="off"
            class="form-control"
            id="body"
            minlength="1"
            name="body"
            placeholder="why-are-you-against"
            type="textarea"
          />
          <div
            class="Notepad__Container-imViwV dJKVKi visible-print-block"
          >
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
          </div>
        </div>
        <div
          class="sc-bcXGCL bghzXx"
        >
          <button
            class="sc-bcXGCL sc-laZSpB fhIZOJ gDuqin cap-button"
            type="button"
          >
            global.cancel
          </button>
          <button
            class="sc-bcXGCL sc-laZSpB dNMLhR ietVcX cap-button"
            type="submit"
          >
            argument.publish.mine
          </button>
        </div>
      </form>
    </div>
  </div>,
]
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted anonymously 1`] = `
Array [
  <div
    class="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    style="width:100%;opacity:0"
  >
    <div
      class="sc-bcXGCL ghEBPM"
    >
      <span
        aria-label="vote"
        class="DebateStepPageVoteForm___StyledSpan2-llVMxp jJypkj"
        role="img"
      >
        🗳️
      </span>
      <span>
        thanks-for-your-vote {"instance":"CapCollectif"}
      </span>
      <button
        class="sc-bcXGCL sc-laZSpB jhruA-D bGltjj cap-button"
        type="button"
      >
        delete.vote.against
      </button>
    </div>
    <div
      class="sc-bcXGCL cunoZs cap-card DebateStepPageVoteForm___StyledCard-fhHJyb kRMgRs"
    >
      <form
        class="DebateStepPageVoteForm__Form-kprBSF GzXgt"
        id="debate-argument-form"
      >
        <div
          class="form-group"
        >
          <textarea
            aria-describedby="label-body "
            aria-invalid="false"
            autocomplete="off"
            class="form-control"
            id="body"
            minlength="1"
            name="body"
            placeholder="why-are-you-against"
            type="textarea"
          />
          <div
            class="Notepad__Container-imViwV dJKVKi visible-print-block"
          >
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
            <span />
          </div>
        </div>
        <div
          class="sc-bcXGCL bghzXx"
        >
          <button
            class="sc-bcXGCL sc-laZSpB fhIZOJ gDuqin cap-button"
            type="button"
          >
            global.cancel
          </button>
          <div
            arialabel="global.menu"
            data-testid="Modal"
            disclosure="[object Object]"
          />
        </div>
      </form>
    </div>
  </div>,
]
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted anonymously on mobile 1`] = `
Array [
  <div
    class="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    style="width:100%;opacity:1"
  >
    <div
      class="sc-bcXGCL ghEBPM"
    >
      <button
        class="sc-bcXGCL sc-laZSpB jhruA-D bGltjj cap-button"
        type="button"
      >
        delete.vote.against
      </button>
      <p
        class="sc-bcXGCL eDWurL cap-text"
      >
        <span
          aria-label="vote"
          class="DebateStepPageVoteForm___StyledSpan-bFgDPf jqyYXc"
          role="img"
        >
          🗳️
        </span>
        <span>
          thanks-for-your-vote {"instance":"CapCollectif"}
        </span>
      </p>
    </div>
    <div
      arialabel="global.menu"
      data-testid="Modal"
      disclosure="[object Object]"
    />
  </div>,
]
`;

exports[`<DebateStepPageVoteForm/> should renders correctly when voted on mobile 1`] = `
Array [
  <div
    class="sc-bcXGCL cgAMhb toasts-container toasts-container--top"
  />,
  <div
    style="width:100%;opacity:1"
  >
    <div
      class="sc-bcXGCL ghEBPM"
    >
      <button
        class="sc-bcXGCL sc-laZSpB jhruA-D bGltjj cap-button"
        type="button"
      >
        delete.vote.against
      </button>
      <p
        class="sc-bcXGCL eDWurL cap-text"
      >
        <span
          aria-label="vote"
          class="DebateStepPageVoteForm___StyledSpan-bFgDPf jqyYXc"
          role="img"
        >
          🗳️
        </span>
        <span>
          thanks-for-your-vote
        </span>
      </p>
    </div>
    <button
      class="sc-bcXGCL sc-laZSpB jEWjgc ietVcX cap-button"
      type="button"
    >
      publish-argument
    </button>
  </div>,
]
`;
